svcs/fastapi_kube_only/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubefastapiapp
  labels:
    service: kubefastapiapp
spec:
  selector:
    app: kubefastapiapp
  ports:
  - port: 80
